# SCC0250-CG

./: .editorconfig  .gitattributes  CMakeLists.txt  LICENSE  Makefile  README.md  conanfile.txt
assets/: armor.mtl  boss.asset  bullet.asset  crawler.mtl  defaultFragment.glsl  defaultVertex.glsl  kelp.mtl  labtank.mtl  rock.mtl  scenery.blend  sceneryBeam.mtl  sceneryConcrete.mtl  sceneryRock.mtl  scenerySand.mtl  sceneryWall.mtl  ship.asset  ship2.asset  skyboxFragment.glsl  skyboxVertex.glsl  skybox_frag.glsl  skybox_vert.glsl  table.mtl  vertex.glsl  voidMouth.mtl  weapon.mtl
assets/2DAssets/: asteroid.asset  bossBullet.asset  bullet.asset
src/: CircleCollider.cpp  CircleCollider.hpp  Collider.cpp  Collider2D.hpp  Color.cpp  Color.hpp  Component.hpp  Event.hpp  GameObject.cpp  Geometry.cpp  Geometry.hpp  IUpdatable.hpp  Input.cpp  Input.hpp  Matrix.cpp  Matrix.hpp  Matrix4x4.cpp  Matrix4x4.hpp  Moveable.cpp  Moveable.hpp  Object2D.cpp  Object2D.hpp  Player.cpp  Player.hpp  PoissonDiscSampling.cpp  PoissonDiscSampling.hpp  Renderer.cpp  Renderer.hpp  Scene.cpp  Scene.hpp  Shader.cpp  Shader.hpp  ShapeRenderer.cpp  ShapeRenderer.hpp  TestScene.cpp  TestScene.hpp  Time.hpp  Transform.cpp  Transform.hpp  Vector.cpp  (+5 more)
src/Assets/: AssetLibrary.cpp  AssetLibrary.hpp  AssetLoader.cpp  AssetLoader.hpp  FileOperations.hpp  Texture2D.cpp  Texture2D.hpp  WavefrontMaterial.cpp  WavefrontMaterial.hpp  WavefrontMaterialParser.hpp  WavefrontObject.cpp  WavefrontObject.hpp  WavefrontObjectParser.hpp  WavefrontParser.hpp
src/Components/: BaseEnemy.hpp  Boss.cpp  Boss.hpp  Camera.cpp  Camera.hpp  Component.cpp  Component.hpp  DamageOnContact.cpp  DamageOnContact.hpp  DestroyArea.cpp  DestroyArea.hpp  DestroyOnDie.cpp  DestroyOnDie.hpp  EnemyShip.cpp  EnemyShip.hpp  ExitOnDeath.cpp  ExitOnDeath.hpp  FollowObject.cpp  FollowObject.hpp  GameObject.cpp  GameObject.hpp  Health.cpp  Health.hpp  HealthBar.cpp  HealthBar.hpp  ItemAnimator.cpp  ItemAnimator.hpp  Light.cpp  Light.hpp  Moveable.cpp  Moveable.hpp  Player.cpp  Player.hpp  PlayerDeath.cpp  PlayerDeath.hpp  RenderParamInput.cpp  RenderParamInput.hpp  RendererComponent.hpp  ShapeRenderer.cpp  ShapeRenderer.hpp  (+12 more)
src/Events/: Event.hpp  Listener.hpp
src/Input/: Input.cpp  Input.hpp
src/Interfaces/: IUpdatable.hpp
src/Math/: Matrix4x4.cpp  Matrix4x4.hpp  Vector.cpp  Vector.hpp
src/Physics/: CircleCollider.cpp  CircleCollider.hpp  Collider.cpp  Collider.hpp
src/Rendering/: Color.cpp  Color.hpp  GLObject.cpp  GLObject.hpp  Geometry.cpp  Geometry.hpp  Geometry2D.cpp  Geometry2D.hpp  Geometry3D.cpp  Geometry3D.hpp  Material.cpp  Material.hpp  PoissonDiscSampling.cpp  PoissonDiscSampling.hpp  RenderData.hpp  RenderStateChange.hpp  Renderer.cpp  Renderer.hpp  Shader.cpp  Shader.hpp  TextureObject.cpp  TextureObject.hpp  VertexData.hpp
src/Scene/: GameScene.cpp  GameScene.hpp  Scene.cpp  Scene.hpp
src/Time/: Time.cpp  Time.hpp
src/Utils/: IOUtils.hpp  TypeUtils.hpp
src/WindowSystem/: WindowSystem.cpp  WindowSystem.hpp
src/adven/: Collider.hpp  Component.hpp  GameObject.hpp  IUpdatable.hpp  Moveable.hpp  Scene.hpp
